added tikz pictures for Chapter 1
All images for chapter 1 are now tikz pictures. Also fixed a couple little things that the initial port didn't get.

--- a/preamble.tex
+++ b/preamble.tex
@@ -4,6 +4,7 @@
 \usepackage{graphicx}
 \usepackage{parskip}
 \usepackage{tikz}
+\usetikzlibrary{calc, decorations.pathreplacing}
 \usepackage{pgfplots}
 \pgfplotsset{compat=1.17}
 \graphicspath{{figures/}}
