Moved to a section file structure
using import package for nested file structure and relative imports.

--- a/main.tex
+++ b/main.tex
@@ -1,3 +1,6 @@
+% accessibility?
+% \DocumentMetadata{testphase=phase-III,testphase=math}
+
 \documentclass[12pt]{book}
 
 % Preamble with package includes, custom commands, etc.
@@ -14,7 +17,7 @@
 
 \mainmatter
 % Include chapter files
-\include{chapters/chapter01/chapter01}
+\import{chapters/chapter01}{chapter01}
 % \include{chapters/chapter02}
 % Add more chapters as needed
 
