--- a/preamble.tex
+++ b/preamble.tex
@@ -3,11 +3,14 @@
 \usepackage{amsthm}
 \usepackage{graphicx}
 \usepackage{parskip}
+
+\usepackage{import}
+
 \usepackage{tikz}
 \usetikzlibrary{calc, decorations.pathreplacing}
 \usepackage{pgfplots}
 \pgfplotsset{compat=1.17}
-\graphicspath{{figures/}}
+%\graphicspath{{figures/}}
 
 \newtheorem{example}{Example}[section]
 \newtheorem{solution}{Solution}[section]
