--- a/preamble.tex
+++ b/preamble.tex
@@ -3,6 +3,7 @@
 \usepackage{amsthm}
 \usepackage{graphicx}
 \usepackage{parskip}
+% \usepackage{tagpdf}
 
 \usepackage{import}
 
@@ -19,14 +20,14 @@
 
 \usepackage{tcolorbox}
 \tcolorboxenvironment{summarybox}{
-  colback=yellow!5!white,
-  colframe=yellow!75!black,
-  left=1mm,
-  right=1mm,
-  top=1mm,
-  bottom=1mm,
-  before skip=10pt,
-  after skip=10pt
+    colback=yellow!5!white,
+    colframe=yellow!75!black,
+    left=1mm,
+    right=1mm,
+    top=1mm,
+    bottom=1mm,
+    before skip=10pt,
+    after skip=10pt
 }
 \newtheorem{summarybox}{Summary}[chapter]
 
