--- a/preamble.tex
+++ b/preamble.tex
@@ -9,6 +9,8 @@
 
 \usepackage{tikz}
 \usetikzlibrary{calc, decorations.pathreplacing}
+\usetikzlibrary{arrows.meta}
+\definecolor{darkgreen}{RGB}{38, 112, 7}
 \usepackage{pgfplots}
 \pgfplotsset{compat=1.17}
 %\graphicspath{{figures/}}
