Chapter 3 import finished

--- a/main.tex
+++ b/main.tex
@@ -18,8 +18,8 @@
 
 \mainmatter
 % Include chapter files
-% \import{chapters/chapter01}{chapter01}
-% \import{chapters/chapter02}{chapter02}
+\import{chapters/chapter01}{chapter01}
+\import{chapters/chapter02}{chapter02}
 \import{chapters/chapter03}{chapter03}
 
 % Add more chapters as needed
