Import of 4.1 and 4.2 complete

--- a/preamble.tex
+++ b/preamble.tex
@@ -5,12 +5,15 @@
 \usepackage{parskip}
 % \usepackage{tagpdf}
 
+\usepackage[table]{xcolor}
+
 \usepackage{import}
 
 \usepackage{tikz}
 \usetikzlibrary{calc, decorations.pathreplacing}
 \usetikzlibrary{arrows.meta}
 \definecolor{darkgreen}{RGB}{38, 112, 7}
+
 \usepackage{pgfplots}
 \pgfplotsset{compat=1.17}
 %\graphicspath{{figures/}}
