--- a/main.tex
+++ b/main.tex
@@ -21,6 +21,9 @@
 \import{chapters/chapter01}{chapter01}
 \import{chapters/chapter02}{chapter02}
 \import{chapters/chapter03}{chapter03}
+\import{chapters/chapter04}{chapter04}
+
+\import{chapters/chapter09}{chapter09}
 
 % Add more chapters as needed
 
