Chapter 4 import finished

--- a/preamble.tex
+++ b/preamble.tex
@@ -34,6 +34,6 @@
     before skip=10pt,
     after skip=10pt
 }
-\newtheorem{summarybox}{Summary}[chapter]
+\newtheorem{summarybox}{Summary}[section]
 
 % Custom commands
