--- a/main.tex
+++ b/main.tex
@@ -18,12 +18,13 @@
 
 \mainmatter
 % Include chapter files
-\import{chapters/chapter01}{chapter01}
-\import{chapters/chapter02}{chapter02}
-\import{chapters/chapter03}{chapter03}
-\import{chapters/chapter04}{chapter04}
+% \import{chapters/chapter01}{chapter01}
+% \import{chapters/chapter02}{chapter02}
+% \import{chapters/chapter03}{chapter03}
+% \import{chapters/chapter04}{chapter04}
+\import{chapters/chapter05}{chapter05}
 
-\import{chapters/chapter09}{chapter09}
+% \import{chapters/chapter09}{chapter09}
 
 % Add more chapters as needed
 
