section 5.3 import complete

--- a/preamble.tex
+++ b/preamble.tex
@@ -3,6 +3,7 @@
 \usepackage{amsthm}
 \usepackage{graphicx}
 \usepackage{parskip}
+\usepackage[colorlinks=true, linkcolor=blue, urlcolor=blue]{hyperref}
 % \usepackage{tagpdf}
 
 \usepackage[table]{xcolor}
