--- a/main.tex
+++ b/main.tex
@@ -23,6 +23,7 @@
 \import{chapters/chapter03}{chapter03}
 \import{chapters/chapter04}{chapter04}
 \import{chapters/chapter05}{chapter05}
+\import{chapters/chapter06}{chapter06}
 
 % \import{chapters/chapter09}{chapter09}
 
