--- a/main.tex
+++ b/main.tex
@@ -25,7 +25,7 @@
 \import{chapters/chapter05}{chapter05}
 \import{chapters/chapter06}{chapter06}
 
-% \import{chapters/chapter09}{chapter09}
+\import{chapters/chapter09}{chapter09}
 
 % Add more chapters as needed
 
