--- a/preamble.tex
+++ b/preamble.tex
@@ -2,6 +2,7 @@
 \usepackage{amsfonts}
 \usepackage{amsthm}
 \usepackage{graphicx}
+\usepackage{venndiagram}
 \usepackage{parskip}
 \usepackage[most]{tcolorbox}
 \usepackage[colorlinks=true, linkcolor=blue, urlcolor=blue]{hyperref}
@@ -15,6 +16,9 @@
 \usetikzlibrary{calc, decorations.pathreplacing}
 \usetikzlibrary{arrows.meta}
 \definecolor{darkgreen}{RGB}{38, 112, 7}
+\usetikzlibrary{trees}
+% \usetikzlibrary{graphdrawing}
+% \usegdlibrary{trees}
 
 \usepackage{pgfplots}
 \pgfplotsset{compat=1.17}
@@ -25,34 +29,6 @@
 \newtheorem{definition}{Definition}[section]
 \newtheorem{note}{Note}[section]
 
-% \usepackage{tcolorbox}
-% \tcolorboxenvironment{summarybox}{
-%     colback=yellow!5!white,
-%     colframe=yellow!75!black,
-%     left=1mm,
-%     right=1mm,
-%     top=1mm,
-%     bottom=1mm,
-%     before skip=10pt,
-%     after skip=10pt
-% }
-% \newtheorem{summarybox}{Summary}[section]
-
-% \newtheorem{summarythm}{Summary}[section]
-
-% \newtcolorbox[auto counter,number within=section]{summarybox}[2][]{% #1 is optional, #2 is mandatory (the title)
-%     colback=yellow!5!white,
-%     colframe=yellow!75!black,
-%     fonttitle=\bfseries,
-%     title=Summary~\thesection.\arabic{summarythm}:~#2,
-%     left=1mm,
-%     right=1mm,
-%     top=1mm,
-%     bottom=1mm,
-%     before skip=10pt,
-%     after skip=10pt,
-%     #1
-% }
 
 \newcounter{summarybox}
 \numberwithin{summarybox}{section} % Make the summarybox counter reset with each new section
