--- a/main.tex
+++ b/main.tex
@@ -24,7 +24,8 @@
 \import{chapters/chapter04}{chapter04}
 \import{chapters/chapter05}{chapter05}
 \import{chapters/chapter06}{chapter06}
-
+\import{chapters/chapter07}{chapter07}
+% \import{chapters/chapter08}{chapter08}
 \import{chapters/chapter09}{chapter09}
 
 % Add more chapters as needed
