--- a/preamble.tex
+++ b/preamble.tex
@@ -46,3 +46,8 @@
     after skip=10pt,
     code={\refstepcounter{summarybox}} % Increment summarybox counter
 }
+
+\newcommand{\hearts}{{\color{red}\ensuremath\heartsuit}}
+\newcommand{\diamonds}{{\color{red}\ensuremath\diamondsuit}}
+\newcommand{\spades}{\ensuremath\spadesuit}
+\newcommand{\clubs}{\ensuremath\clubsuit}
