--- a/preamble.tex
+++ b/preamble.tex
@@ -5,8 +5,9 @@
 \usepackage{venndiagram}
 \usepackage{parskip}
 \usepackage[most]{tcolorbox}
+
 \usepackage[colorlinks=true, linkcolor=blue, urlcolor=blue]{hyperref}
-% \usepackage{tagpdf}
+\usepackage[all]{hypcap}
 
 \usepackage[table]{xcolor}
 
