--- a/preamble.tex
+++ b/preamble.tex
@@ -6,8 +6,12 @@
 \usepackage{parskip}
 \usepackage[most]{tcolorbox}
 
+\usepackage{enumerate}
+
 \usepackage[colorlinks=true, linkcolor=blue, urlcolor=blue]{hyperref}
-\usepackage[all]{hypcap}
+% TODO Fix the fact that the references to figures don't jump to the correct spot
+% \usepackage[all]{hypcap}
+% \usepackage{caption}
 
 \usepackage[table]{xcolor}
 
