Chapter 10 import finished

--- a/main.tex
+++ b/main.tex
@@ -27,6 +27,8 @@
 \import{chapters/chapter07}{chapter07}
 \import{chapters/chapter08}{chapter08}
 \import{chapters/chapter09}{chapter09}
+\import{chapters/chapter10}{chapter10}
+\import{chapters/chapter11}{chapter11}
 
 % Add more chapters as needed
 
