--- a/preamble.tex
+++ b/preamble.tex
@@ -22,8 +22,7 @@
 \usetikzlibrary{arrows.meta}
 \definecolor{darkgreen}{RGB}{38, 112, 7}
 \usetikzlibrary{trees}
-% \usetikzlibrary{graphdrawing}
-% \usegdlibrary{trees}
+\usetikzlibrary{automata,positioning}
 
 \usepackage{pgfplots}
 \pgfplotsset{compat=1.17}
