Import Linear Func Problems sections 1-3

--- a/preamble.tex
+++ b/preamble.tex
@@ -33,6 +33,8 @@
 \newtheorem{definition}{Definition}[section]
 \newtheorem{note}{Note}[section]
 
+% used for homework
+\newtheorem{puzzle}{Puzzle}[section]
 
 \newcounter{summarybox}
 \numberwithin{summarybox}{section} % Make the summarybox counter reset with each new section
