Finished importing all problems and recompiled book

--- a/main.tex
+++ b/main.tex
@@ -16,21 +16,44 @@
 \maketitle
 \tableofcontents
 
+
 \mainmatter
 % Include chapter files
 \import{chapters/chapter01}{chapter01}
-\import{chapters/chapter02}{chapter02}
-\import{chapters/chapter03}{chapter03}
-\import{chapters/chapter04}{chapter04}
-\import{chapters/chapter05}{chapter05}
-\import{chapters/chapter06}{chapter06}
-\import{chapters/chapter07}{chapter07}
-\import{chapters/chapter08}{chapter08}
-\import{chapters/chapter09}{chapter09}
-\import{chapters/chapter10}{chapter10}
-\import{chapters/chapter11}{chapter11}
+\import{chapters/linear_functions_hw}{linear_functions_hw}
 
-% Add more chapters as needed
+\import{chapters/chapter02}{chapter02}
+\import{chapters/matrices_hw}{matrices_hw}
+
+\import{chapters/chapter03}{chapter03}
+\import{chapters/geometric_method_hw}{geometric_method_hw}
+
+\import{chapters/chapter04}{chapter04}
+\import{chapters/simplex_method_hw}{simplex_method_hw}
+
+\import{chapters/chapter05}{chapter05}
+\import{chapters/exp_log_functions_hw}{exp_log_functions_hw}
+
+\import{chapters/chapter06}{chapter06}
+\import{chapters/finance_hw}{finance_hw}
+
+\import{chapters/chapter07}{chapter07}
+\import{chapters/sets_counting_hw}{sets_counting_hw}
+
+\import{chapters/chapter08}{chapter08}
+\import{chapters/probability_hw}{probability_hw}
+
+\import{chapters/chapter09}{chapter09}
+\import{chapters/more_probability_hw}{more_probability_hw}
+
+\import{chapters/chapter10}{chapter10}
+\import{chapters/markov_hw}{markov_hw}
+
+\import{chapters/chapter11}{chapter11}
+\import{chapters/game_theory_hw}{game_theory_hw}
+
+\import{chapters/course_review}{course_review}
+
 
 \backmatter
 % Bibliography, index, etc.
