Minor Typo fixes in Leontief and Probability

--- a/preamble.tex
+++ b/preamble.tex
@@ -17,6 +17,7 @@
 
 \usepackage{import}
 
+% both tikz and pgfplots are needed for graphing
 \usepackage{tikz}
 \usetikzlibrary{calc, decorations.pathreplacing}
 \usetikzlibrary{arrows.meta}
@@ -26,7 +27,6 @@
 
 \usepackage{pgfplots}
 \pgfplotsset{compat=1.17}
-%\graphicspath{{figures/}}
 
 \newtheorem{example}{Example}[section]
 \newtheorem{solution}{Solution}[section]
